...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exoView"
            android:layout_width="@dimen/exo_player_width"
            android:layout_height="@dimen/card_view_heigth"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
